--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+html {
+  background: #1f3158;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+svg {
+  display: block;
+  margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  font-family: "Open Sans", sans-serif;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+input {
+  width: 150px;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+input[type="button"] {
+  background-color: #c6efff;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+input[type="text"]:focus {
+  background-color: lightblue;
+}
+input[type="button"]:hover {
+  background-color: #e3f6fd;
+}
+#messages {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  padding: 12px;
+  width: 100%;
+  display: inline-block;
+  border: 1px solid black;
+  max-height: 250px;
+  min-height: 250px;
+  overflow: scroll;
+  color: white;
+  background: #111827;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#messages p {
+  margin: 0;
+}
+
+#messages span {
+  overflow-y: scroll;
+  overflow: scroll;
 }
